--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+
+
+.faqs{
+  padding: auto;
+  margin: auto;
+  position: relative;
+  top: -150px;
+  width: 570px;
+  background-color: hsl(0, 0%, 100%);
+  border-radius: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1{
+  margin-left: 25px;
+  padding-top: 35px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.icon-star{
+  margin-right: 25px;
+  width: 35px;
+  height: 35px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.title {
+  font-size: 45px;
+  font-weight: 700;
+  margin: auto;
+  padding: auto;
+  color: hsl(292, 42%, 14%);
 }
 
-.App-link {
-  color: #61dafb;
+.faqAccordion {
+    margin-left: 25px;
+    margin-right: 25px;
+  padding-bottom: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
